Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,21 +1,21 @@
 #Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
+
+BOT_TOKEN = "5057300600:AAHmY1B6R1IsSYNEvkppy314RqswA6pP2dQ"
+GDRIVE_FOLDER_ID = "1uborKthvDR3DY19Qzefluo86jTtojN6k"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-OWNER_ID = ""
+OWNER_ID = "537370867"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "5"
 AUTO_DELETE_MESSAGE_DURATION = "15"
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+TELEGRAM_API = "660347"
+TELEGRAM_HASH = "8476419cb36c4d12ab9bb51dc8aae2fd"
 MAX_DOWNLOAD_SPEED = "0"
 MAX_CONCURRENT_DOWNLOADS = "3"
 TRACKERSLIST = "https://trackerslist.com/all_aria2.txt"
 USE_TELEGRAPH = "false"
 
 # Optional config
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "537370867 794908815 738554827 443816532"
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
 UPTOBOX_TOKEN = ""
